Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/iOrder__c.object
<CustomObject>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice_Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice_Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>iOrders</relationshipLabel>
        <relationshipName>iOrders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Order_External_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order_Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product_Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Number__c</fullName>
        <label>Shipping_Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>iOrder</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iOrders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>